GUI-2627: Cap content height and enable scrolling for alarm history JSON content to avoid history details dialog from overflowing viewport on alarm history page

--- a/eucaconsole/static/sass/pages/alarm_history.scss
+++ b/eucaconsole/static/sass/pages/alarm_history.scss
@@ -12,6 +12,8 @@ table {
     pre {
         margin: 1rem 0 0;
         font-size: 0.9rem;
+        height: 60vh;
+        overflow: scroll;
     }
 
     .button {
